--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,11 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cicleci/node:14
+      - image: circleci/node:14
     steps:
       - run:
         name: show version
-        commond: node -v
+        command: node -v
       - run:
         name: hello world from cicleci
-        commond: echo 'hello world'
+        command: echo 'hello world'
