--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,31 @@ jobs:
   build:
     docker:
       - image: circleci/node:14
+    branches:
+      only:
+        - master
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - '70:e2:cf:4d:11:de:07:74:d4:eb:95:6b:96:56:3c:a7'
+      - checkout
+      - restore_cache:
+          keys:
+            - dependencies-
       - run:
-          name: show version
-          command: node -v
+          name: Install
+          command: yarn install
+      - save_cache:
+          paths:
+            - node_moudles
+          key: dependencies-
       - run:
-          name: hello world from cicleci
-          command: echo 'hello world'
+          name: Build github pages
+          command: yarn build
+      #gh-pages
+      - run:
+          name: Prepate shell commands
+          command: chmod +x scripts/deploy.sh
+      - run:
+          name: Run Deploy scripts
+          command: ./scripts/deploy.sh
