--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,8 @@ jobs:
           command: yarn build
       #gh-pages
       - run:
-          name: Prepate shell commands
+          name: Prepare shell commands
           command: chmod +x scripts/deploy.sh
       - run:
-          name: Run Deploy scripts
+          name: Run Deploy to Github pages
           command: ./scripts/deploy.sh
